[package]
name = "rpki-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rpki_rs"
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.41"
num-bigint = "0.4.6"
pyo3 = { version = "0.24.0", features = ["chrono", "num-bigint"]  }
rpki = { version = "0.18.6", features = ["repository"] }
